# auto-image-labeler

./: .gitignore  README.md  app.py  common.py  hello.py  image_classification.py  object_detection.py  pyproject.toml
src/: common.py  image_classification.py  object_detection.py
